# internet-speed-sl

./: .gitignore  LICENSE  main.py  pyproject.toml
